--- a/src/flavors/phila2035/config.yml
+++ b/src/flavors/phila2035/config.yml
@@ -173,7 +173,7 @@ activity:
 
 place:
   adding_supported: true
-  add_button_label: _(Add a Place)
+  add_button_label: _(Share your Knowledge)
   # Labels for the buttons that toggle the map and list views
   show_list_button_label: _(List All Places)
   show_map_button_label: _(Show the Map)
